--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,29 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-feature android:name="android.hardware.location" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- Allows an app to access approximate location.  近似定位权限，api1，如：网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <!-- Allows an app to access precise location 精准定位权限，api1，如：GPS定位-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <!-- Allows an app to access location in the background. 后台定位权限,api29，android10新增 -->
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
+
 
     <application
+        android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.COM31007">
+        android:theme="@style/Theme.COM31007"
+        android:requestLegacyExternalStorage="true">
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -44,6 +59,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <activity
+            android:name="uk.ac.shef.oak.com4510.ui.map.MapActivity"
+            android:exported="true" >
+        </activity>
+
+        <activity
+            android:name="uk.ac.shef.oak.com4510.ui.mapdetail.MapDetailActivity"
+            android:exported="true"
+            android:label="@string/title_home" >
+        </activity>
+
+
+
     </application>
 
 
