--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
 
     implementation 'androidx.room:room-runtime:2.2.3'
     annotationProcessor "androidx.room:room-compiler:2.2.3"
+    //noinspection GradleCompatible
     implementation "com.android.support:recyclerview-v7:23.4.0"
     implementation "com.google.auto.value:auto-value-annotations:1.8.2"
     annotationProcessor "com.google.auto.value:auto-value:1.8.2"
